<resources>
    <string name="app_name">Fly-Vic App</string>
    <string name="goButtonName">Click Me</string>
    <string name="loadDatabaseBtn">Load DB</string>
    <string name="flyButton" />
    <string name="search">Search</string>
    <string name="go">Go</string>
    <string name="name">Title: </string>
    <string name="amount">Score: </string>
    <string name="species">Language: </string>
    <string name="modify">Modify</string>
    <string name="borrar">Delete</string>
    <string name="add">Add</string>
    <string name="agregar">Add Movie</string>
    <string name="back">Back</string>
    <string name="modifcarButton">Modify</string>
    <string name="delFish">Delete</string>
    <string name="lddb">Load Database</string>



    <string name="loginPage">Login Page</string>
    <string name="textView_Username">Username:</string>
    <string name="editText_Username">Username...</string>
    <string name="textView_Pass">Password:</string>
    <string name="editText_Password">Password...</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonSignUp">Sign Up</string>
    <string name="tryLogin">Remaining attempts:</string>
    <string name="tryLeft">5</string>

    <string name="textoPrueba">Test Text</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="export">Export DB</string>
    <string name="title_activity_maps">Map</string>
    <string name="movies">Movies</string>
    <string name="editText_Location">Location...</string>
    <string name="Maps">Maps</string>
    <string name="noText" />
</resources>