<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DatabaseScreen">

    <FrameLayout
        android:id="@+id/externalContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

    <Button
        android:id="@+id/button14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendPost"
        android:text="@string/export" />

    <Button
        android:id="@+id/loadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="loadDatabase"
        android:text="@string/loadDatabaseBtn" />

    <Button
        android:id="@+id/flyButton"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:onClick="addScreen"
        android:text="@string/agregar" />

    <ScrollView
        android:id="@+id/externdata"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/fishTable"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>