<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="USER"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:text="@string/textView_Pass" />

    <EditText
        android:id="@+id/pwdField"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="loginAction"
        android:text="@string/buttonLogin"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="createUser"
        android:text="@string/buttonSignUp" />

    <Button
        android:id="@+id/button12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startService"
        android:text="Start Service" />

</LinearLayout>